GNOME Bugzilla – Bug 700444
[W32] The use of uninitialized GDK default screen
Last modified: 2013-06-11 09:16:40 UTC
Some functions in GDK rely on having default display, default screen, etc. These default objects are initialized by _gdk_win32_display_open(). However, _gdk_win32_display_open() sets them at the end: g_signal_emit_by_name (_gdk_display, "opened"); , and they can't be used until that moment. Yet sub-initialization routines _gdk_win32_display_open() uses depend on these default objects.
Created attachment 244387 [details] [review] Fix display/screen/displaymanager init interdependency
Created attachment 244388 [details] [review] Pass screen to visual init (no default screen is available yet)
Review of attachment 244387 [details] [review]: makes sense to me
Review of attachment 244388 [details] [review]: makes sense
*** Bug 701121 has been marked as a duplicate of this bug. ***
Attachment 244387 [details] pushed as ae35951 - Fix display/screen/displaymanager init interdependency Attachment 244388 [details] pushed as b001625 - Pass screen to visual init (no default screen is available yet)