Fix display/screen/displaymanager init interdependency

https://bugzilla.gnome.org/show_bug.cgi?id=700444